# dtu_mlops_group32_project

./: .dockerignore  .gitignore  README.md  backend.dockerfile  cloudbuild.yaml  data.dvc  docker.ignore  frontend.dockerfile  predict.docerfile  predict.dockerfile  pyproject.toml  requirements.txt  requirements_backend.txt  requirements_frontend.txt  requirements_predict.txt  requirements_tests.txt  tasks.py  vertex_train.yaml
.github/workflows/: tests.yaml
app/: backend.py  frontend.py  main.py
data/: README.md  make_dataset.py
dockerfiles/: api.dockerfile  train.dockerfile  train_cpu.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: README.md  download_dataset.py  model.py  train_model.py
reports/: README.md
src/app/: main.py
src/dtu_mlops_group32_project/: __init__.py  api.py  api_local.py  app.py  data.py  evaluate.py  generate_local.py  generate_summary.py  main.py  model.py  train.py
src/dtu_mlops_group32_project/api/: app.py
src/dtu_mlops_group32_project/config/: default_params.yaml  sweep_config.yaml
src/dtu_mlops_group32_project/wandb/: latest-run
src/dtu_mlops_group32_project/wandb/run-20250122_162122-1z66zud4/: run-1z66zud4.wandb
src/dtu_mlops_group32_project/wandb/run-20250122_162122-1z66zud4/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
src/dtu_mlops_group32_project/wandb/run-20250123_142332-xbq405ul/: run-xbq405ul.wandb
src/dtu_mlops_group32_project/wandb/run-20250123_142332-xbq405ul/files/: requirements.txt  wandb-metadata.json
src/dtu_mlops_group32_project/wandb/run-20250123_142408-pb8ikred/: run-pb8ikred.wandb
src/dtu_mlops_group32_project/wandb/run-20250123_142408-pb8ikred/files/: config.yaml  wandb-metadata.json  wandb-summary.json
tests/: __init__.py  test_data.py
tests/integrationtests/: test_api.py
tests/unittests/: test_data.py  test_model.py
