[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu_mlops_group32_project"
version = "0.0.1"
description = "Exam project for group 32 as part of MLOps course Winter 2025"
authors = [
  { name = "group32", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = {find = {where = ["."]}} # Automatically find all packages in the project
package-dir = {"" = "."}  # Root directory as the base for packages

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
