[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dtu_mlops_group32_project"
version = "0.0.1"
description = "Exam project for group 32 as part of MLOps course Winter 2025"
authors = [
  { name = "Sebastian Gilson", email = "s250678@student.dtu.dk" },
  { name = "Arzu Burcu Güven", email = "s250394@student.dtu.dk" },
  { name = "Knud Appel Erschens Mondrup", email = "s241047@student.dtu.dk" },
  { name = "Oriol Baldrís Vendrell", email = "s243805@student.dtu.dk" }
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = {find = {where = ["src"]}} # Automatically find all packages in the project

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
  "src/dtu_mlops_group32_project/evaluate.py",
  "src/dtu_mlops_group32_project/generate_local.py",
  "src/dtu_mlops_group32_project/generate_summary.py",
  "src/dtu_mlops_group32_project/main.py",
  "src/dtu_mlops_group32_project/train.py",
  "src/dtu_mlops_group32_project/visualize.py",
  "app/main.py"
  "tasks.py"
]